[gd_scene load_steps=7 format=2]

[ext_resource path="res://scripts/ButtonMenu.gd" type="Script" id=1]
[ext_resource path="res://sprites/LOAD.png" type="Texture" id=2]
[ext_resource path="res://scripts/EmpControl.gd" type="Script" id=3]
[ext_resource path="res://scripts/ErrorButton.gd" type="Script" id=4]

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=2]
resource_name = "default"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 360.0 ]
}

[node name="Node2D" type="Node2D"]

[node name="Control" type="Control" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
script = ExtResource( 3 )

[node name="Label" type="Label" parent="Control"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -94.5
margin_right = 94.5
margin_bottom = 39.0
text = "EMPLOYEES"
align = 1
valign = 1

[node name="Button" type="Button" parent="Control"]
margin_left = 34.0
margin_top = 22.0
margin_right = 166.0
margin_bottom = 69.0
text = "BACK"
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -480.0
margin_top = -219.0
margin_right = 480.0
margin_bottom = 265.0

[node name="PanelHeader" type="PanelContainer" parent="Control/VBoxContainer"]
margin_right = 960.0
margin_bottom = 45.0

[node name="HBoxContainer" type="HBoxContainer" parent="Control/VBoxContainer/PanelHeader"]
margin_left = 7.0
margin_top = 7.0
margin_right = 953.0
margin_bottom = 38.0

[node name="IdLabel" type="Label" parent="Control/VBoxContainer/PanelHeader/HBoxContainer"]
margin_top = 8.0
margin_right = 186.0
margin_bottom = 22.0
size_flags_horizontal = 3
text = "ID"
align = 1

[node name="NameLabel" type="Label" parent="Control/VBoxContainer/PanelHeader/HBoxContainer"]
margin_left = 190.0
margin_top = 8.0
margin_right = 376.0
margin_bottom = 22.0
size_flags_horizontal = 3
text = "NAME"
align = 1

[node name="EmailLabel" type="Label" parent="Control/VBoxContainer/PanelHeader/HBoxContainer"]
margin_left = 380.0
margin_top = 8.0
margin_right = 566.0
margin_bottom = 22.0
size_flags_horizontal = 3
text = "EMAIL"
align = 1

[node name="DepLabel" type="Label" parent="Control/VBoxContainer/PanelHeader/HBoxContainer"]
margin_left = 570.0
margin_top = 8.0
margin_right = 756.0
margin_bottom = 22.0
size_flags_horizontal = 3
text = "DEPARTMENT"
align = 1

[node name="null" type="Label" parent="Control/VBoxContainer/PanelHeader/HBoxContainer"]
margin_left = 760.0
margin_right = 946.0
margin_bottom = 31.0
size_flags_horizontal = 3
text = "
"
align = 3

[node name="PanelBody" type="PanelContainer" parent="Control/VBoxContainer"]
margin_top = 49.0
margin_right = 960.0
margin_bottom = 484.0
size_flags_vertical = 3

[node name="ScrollContainer" type="ScrollContainer" parent="Control/VBoxContainer/PanelBody"]
margin_left = 7.0
margin_top = 7.0
margin_right = 953.0
margin_bottom = 428.0

[node name="LinesContainer" type="VBoxContainer" parent="Control/VBoxContainer/PanelBody/ScrollContainer"]
margin_right = 946.0
margin_bottom = 421.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="AddLine" type="HBoxContainer" parent="Control/VBoxContainer/PanelBody/ScrollContainer/LinesContainer"]
margin_right = 946.0
margin_bottom = 24.0

[node name="Label" type="Label" parent="Control/VBoxContainer/PanelBody/ScrollContainer/LinesContainer/AddLine"]
margin_top = 5.0
margin_right = 186.0
margin_bottom = 19.0
size_flags_horizontal = 3

[node name="IName" type="LineEdit" parent="Control/VBoxContainer/PanelBody/ScrollContainer/LinesContainer/AddLine"]
margin_left = 190.0
margin_right = 376.0
margin_bottom = 24.0
size_flags_horizontal = 3

[node name="IEmail" type="LineEdit" parent="Control/VBoxContainer/PanelBody/ScrollContainer/LinesContainer/AddLine"]
margin_left = 380.0
margin_right = 566.0
margin_bottom = 24.0
size_flags_horizontal = 3

[node name="IDepartment" type="SpinBox" parent="Control/VBoxContainer/PanelBody/ScrollContainer/LinesContainer/AddLine"]
margin_left = 570.0
margin_right = 756.0
margin_bottom = 24.0
size_flags_horizontal = 3

[node name="Button" type="Button" parent="Control/VBoxContainer/PanelBody/ScrollContainer/LinesContainer/AddLine"]
margin_left = 760.0
margin_right = 946.0
margin_bottom = 24.0
size_flags_horizontal = 3
text = "ADD"

[node name="ColorRect" type="ColorRect" parent="Control"]
margin_right = 1024.0
margin_bottom = 600.0
color = Color( 0.156863, 0.152941, 0.152941, 0.764706 )

[node name="Sprite" type="Sprite" parent="Control/ColorRect"]
position = Vector2( 503, 314 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Control/ColorRect/Sprite"]
autoplay = "default"
anims/RESET = SubResource( 1 )
anims/default = SubResource( 2 )

[node name="Label" type="Label" parent="Control/ColorRect"]
margin_left = 436.0
margin_top = 220.0
margin_right = 572.0
margin_bottom = 295.0
text = "LOADING..."
align = 1
valign = 1
uppercase = true

[node name="Error" type="ColorRect" parent="Control"]
visible = false
margin_right = 1024.0
margin_bottom = 600.0
color = Color( 0.156863, 0.152941, 0.152941, 0.764706 )
script = ExtResource( 4 )

[node name="Label" type="Label" parent="Control/Error"]
margin_left = 403.0
margin_top = 203.0
margin_right = 606.0
margin_bottom = 278.0
text = "ERROR"
align = 1
valign = 1
uppercase = true

[node name="Button" type="Button" parent="Control/Error"]
margin_left = 401.0
margin_top = 280.0
margin_right = 607.0
margin_bottom = 323.0
text = "OK"

[node name="HTTPRequest" type="HTTPRequest" parent="Control"]

[node name="HTTPRequestAdd" type="HTTPRequest" parent="Control"]

[connection signal="pressed" from="Control/Button" to="Control/Button" method="_on_Button_pressed"]
[connection signal="pressed" from="Control/VBoxContainer/PanelBody/ScrollContainer/LinesContainer/AddLine/Button" to="Control" method="_on_Button_pressed"]
